# housing_search

./: README.md  config.yaml  main.py  mkdocs.yml  pyproject.toml
src/: backend.py  config.yaml  create_bm25_corpus.py  enter_chunks_to_db.py  frontend.py  pdf_splitter.py  process_document.py  query_document.py  temporary_add_to_db.py
src/housing_search/: db_search.py  faiss_common.py  generate_faiss_ivf_index.py  pdf_splitter.py
src/housing_search.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
